Added some tips to example

--- a/examples/playground/public/index.html
+++ b/examples/playground/public/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-<div id="root"></div>
+    <div id="root">
+        <h1>Welcome to Farce Playground!</h1>
+        <p>To get started, please open your browser console.</p>
+        <p>You can access `store`, `FarceActions` and `BoundFarceActions` in the global environment.</p>
+        <p>Try your first transition: <code>store.dispatch(FarceActions.push('/new/path'));</code></p>
+    </div>
 </body>
 
 </html>
