chore: Update dependencies

--- a/examples/playground/public/index.html
+++ b/examples/playground/public/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Farce Playground</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="root">
-        <h1>Welcome to Farce Playground!</h1>
-        <p>To get started, please open your browser console.</p>
-        <p>You can access `store`, `FarceActions` and `BoundFarceActions` in the global environment.</p>
-        <p>Try your first transition: <code>store.dispatch(FarceActions.push('/new/path'));</code></p>
+      <h1>Welcome to Farce Playground!</h1>
+      <p>To get started, please open your browser console.</p>
+      <p>
+        You can access <code>store</code>, <code>FarceActions</code> and
+        <code>BoundFarceActions</code> in the global environment.
+      </p>
+      <p>
+        Try your first transition:
+        <code>store.dispatch(FarceActions.push('/new/path'));</code>
+      </p>
     </div>
-</body>
-
+  </body>
 </html>
