rename and drop history compat

--- a/examples/playground/public/index.html
+++ b/examples/playground/public/index.html
@@ -15,7 +15,7 @@
         <code>BoundFarceActions</code> in the global environment.
       </p>
       <p>
-        Try your first transition:
+        Try your first navigation:
         <code>store.dispatch(FarceActions.push('/new/path'));</code>
       </p>
     </div>
